Fix z-index issue of rotating nav

--- a/js-projects/3_rotating_navigation/styles.css
+++ b/js-projects/3_rotating_navigation/styles.css
@@ -15,8 +15,6 @@ nav {
     height: 100%;
     background-color: rgb(100, 100, 100);
     color: white;
-    position: relative;
-    z-index: -1;
 }
 
 nav ul {
