--- a/react-app/src/components/3_Rotating_Nav/RotatingNav.css
+++ b/react-app/src/components/3_Rotating_Nav/RotatingNav.css
@@ -15,7 +15,7 @@ nav {
     height: 100%;
     background-color: rgb(100, 100, 100);
     color: white;
-    position: relative;
+    position: absolute;
     z-index: -1;
 }
 
